BAB_Token: Update html, css: dropdown_body-drop_item-drop_clone(full),demo-BAB_Token-hinh18..

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -131,6 +131,170 @@
                                                         </div>
                                                     </a>
                                                 </div>
+                                                <div class="drop_item">
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_6.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Academy</div>
+                                                                <div class="head_1_text">Blockchain and crypto education</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_7.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Cloud</div>
+                                                                <div class="head_1_text">Enterprise exchange solutions</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_8.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Launchpad</div>
+                                                                <div class="head_1_text">Token Launch Platform</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_9.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Binance Gift Card</div>
+                                                                <div class="head_1_text">Customizable crypto gift card</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_10.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">DeFi Wallet</div>
+                                                                <div class="head_1_text">Meet the next-generation Web3 wallet</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
+                                                <div class="drop_item">
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_11.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Learn & Earn</div>
+                                                                <div class="head_1_text">Earn free crypto through learning</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_12.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">DEX</div>
+                                                                <div class="head_1_text">Fast and secure decentralized digital asset <br> exchange</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_13.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Research</div>
+                                                                <div class="head_1_text">Institutional-grade analysis and reports</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_14.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">Binance Live</div>
+                                                                <div class="head_1_text">Bringing blockchain broadcasts to you live</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                    <a href="#">
+                                                        <div class="drop_clone">
+                                                            <div class="logo_drop">
+                                                                <img src="../static/img/bab_token/menu_15.png" alt="">
+                                                            </div>
+                                                            <div class="text_drop">
+                                                                <div class="head_1">OTC Trading</div>
+                                                                <div class="head_1_text">Spot, Options, Algo Orders and more</div>
+                                                            </div>
+                                                            <div class="arrow">
+                                                                <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                                </svg>
+                                                            </div>
+                                                        </div>
+                                                    </a>
+                                                </div>
                                             </div>
                                         </div>
                                     </li>
