BAB_Token: Update html, css: uploat:img, Crypto-dropdown_body-drop_item-drop_clone(full),demo-BAB_Token-hinh19..

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -326,7 +326,7 @@
                                             <a href="#">
                                                 <div class="drop_clone">
                                                     <div class="logo_drop">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1s4hjvp"><use xlink:href="#bank-g"></use></svg>
+                                                        <img src="../static/img/bab_token/menu_17.png" alt="">
                                                     </div>
                                                     <div class="text_drop">
                                                         <div class="item_conten node_margin node_pading node_space">
@@ -345,13 +345,31 @@
                                             <a href="#">
                                                 <div class="drop_clone">
                                                     <div class="logo_drop">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="css-1s4hjvp"><use xlink:href="#bank-g"></use></svg>
+                                                        <img src="../static/img/bab_token/menu_18.png" alt="">
                                                     </div>
                                                     <div class="text_drop">
                                                         <div class="item_conten node_margin node_pading">
                                                             <div class="head_1" style="font-size: 16px;">Credit/Debit Card</div>
                                                         </div>
                                                         <div class="head_1_text" style="font-size: 12px;">Buy crypto via Card, Apple Pay, Google Pay</div>
+                                                    </div>
+                                                    <div class="arrow">
+                                                        <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                        </svg>
+                                                    </div>
+                                                </div>
+                                            </a>
+                                            <a href="#">
+                                                <div class="drop_clone">
+                                                    <div class="logo_drop">
+                                                        <img src="../static/img/bab_token/menu_19.png" alt="">
+                                                    </div>
+                                                    <div class="text_drop">
+                                                        <div class="item_conten node_margin node_pading">
+                                                            <div class="head_1" style="font-size: 16px;">Cash Balance</div>
+                                                        </div>
+                                                        <div class="head_1_text" style="font-size: 12px;">Buy Crypto with your EUR balance</div>
                                                     </div>
                                                     <div class="arrow">
                                                         <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
