BAB_Token: Update html, css: size:logo_drop img, uploat:img, Markets-dropdown_body-drop_item-drop_clone(full),demo-BAB_Token-hinh20..

--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -200,15 +200,11 @@ a {
     min-width: 0px;
 }
 
-.logo_drop svg {
-    box-sizing: border-box;
+.logo_drop img {
     margin: 0px;
-    min-width: 0px;
-    color: currentcolor;
     width: 26px;
     height: 26px;
     font-size: 26px;
-    fill: currentcolor;
 }
 
 .head_1 {
