--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -330,10 +330,10 @@
                                                     </div>
                                                     <div class="text_drop">
                                                         <div class="item_conten node_margin node_pading node_space">
-                                                            <div class="head_1" style="font-size: 16px;">Bank Deposit</div>
+                                                            <div class="head_1">Bank Deposit</div>
                                                             <div class="vnd" style="margin-bottom: 5px;">HOT</div>
                                                         </div>
-                                                        <div class="head_1_text" style="font-size: 12px;">Deposit EUR via SEPA or card</div>
+                                                        <div class="head_1_text">Deposit EUR via SEPA or card</div>
                                                     </div>
                                                     <div class="arrow">
                                                         <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
@@ -349,9 +349,9 @@
                                                     </div>
                                                     <div class="text_drop">
                                                         <div class="item_conten node_margin node_pading">
-                                                            <div class="head_1" style="font-size: 16px;">Credit/Debit Card</div>
+                                                            <div class="head_1">Credit/Debit Card</div>
                                                         </div>
-                                                        <div class="head_1_text" style="font-size: 12px;">Buy crypto via Card, Apple Pay, Google Pay</div>
+                                                        <div class="head_1_text">Buy crypto via Card, Apple Pay, Google Pay</div>
                                                     </div>
                                                     <div class="arrow">
                                                         <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
@@ -367,9 +367,9 @@
                                                     </div>
                                                     <div class="text_drop">
                                                         <div class="item_conten node_margin node_pading">
-                                                            <div class="head_1" style="font-size: 16px;">Cash Balance</div>
+                                                            <div class="head_1">Cash Balance</div>
                                                         </div>
-                                                        <div class="head_1_text" style="font-size: 12px;">Buy Crypto with your EUR balance</div>
+                                                        <div class="head_1_text">Buy Crypto with your EUR balance</div>
                                                     </div>
                                                     <div class="arrow">
                                                         <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
@@ -384,10 +384,58 @@
                             </lu>
                         </div>
                         <div class="item-menu">
-                            <div class="item_conten">
-                                <p>Markets</p>
-                                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                            </div>
+                            <lu>
+                                <li class="dropdown">
+                                    <a href="" class="drop_text">
+                                        <div class="item_conten">
+                                            <p>Markets</p>
+                                            <i class="fa fa-caret-down" aria-hidden="true"></i>
+                                        </div>
+                                    </a>
+                                    <div class="dropdown-content">
+                                        <div class="dropdown_body display_block">
+                                            <div class="drop_item">
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_20.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">Markets Overview</div>
+                                                            </div>
+                                                            <div class="head_1_text">Overview of the crypto market with real-time <br> prices and key data</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_21.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Trading Data</div>
+                                                            </div>
+                                                            <div class="head_1_text">View top market movers and price performance</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </lu>
                         </div>
                         <div class="item-menu">
                             <div class="item_conten">
