--- a/static/css/bab_token.css
+++ b/static/css/bab_token.css
@@ -174,6 +174,14 @@ a {
     z-index: 1100;
 }
 
+.node_size_1 {
+    transform: translate(-140px, 0px);
+    box-sizing: border-box;
+    margin: 0px;
+    min-width: 0px;
+    z-index: 1100;
+}
+
 .dropdown-content {
     display: none;
     position: absolute;
