BAB_Token: Update html, css: Trade-dropdown_body-drop_item-drop_clone(full),demo-BAB_Token-hinh22..

--- a/templates/bab_token.html
+++ b/templates/bab_token.html
@@ -447,7 +447,7 @@
                                         </div>
                                     </a>
                                     <div class="dropdown-content node_size_1">
-                                        <div class="dropdown_body display_block">
+                                        <div class="dropdown_body">
                                             <div class="drop_item">
                                                 <a href="#">
                                                     <div class="drop_clone">
@@ -522,7 +522,80 @@
                                                     </div>
                                                 </a>
                                             </div>
-
+                                            <div class="drop_item">
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_22.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading node_space">
+                                                                <div class="head_1">P2P</div>
+                                                            </div>
+                                                            <div class="head_1_text">Bank transfer and 100+ options</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_1.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Swap Farming</div>
+                                                            </div>
+                                                            <div class="head_1_text">Swap to earn BNB</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_23.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">Fan Token</div>
+                                                            </div>
+                                                            <div class="head_1_text">Upgrade your fan experience</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                                <a href="#">
+                                                    <div class="drop_clone">
+                                                        <div class="logo_drop">
+                                                            <img src="../static/img/bab_token/menu_24.png" alt="">
+                                                        </div>
+                                                        <div class="text_drop">
+                                                            <div class="item_conten node_margin node_pading">
+                                                                <div class="head_1">OTC Block Trading</div>
+                                                            </div>
+                                                            <div class="head_1_text">RFQ and trade large spot orders</div>
+                                                        </div>
+                                                        <div class="arrow">
+                                                            <svg viewBox="0 0 18 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+                                                                    <path d="M10.5 15L9.1 13.6L14.2 8.5L5.68248e-07 8.5L7.43094e-07 6.5L14.2 6.5L9.1 1.4L10.5 -6.55671e-07L18 7.5L10.5 15Z"></path>
+                                                            </svg>
+                                                        </div>
+                                                    </div>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </li>
